# appenzell

./: CMakeLists.txt  README.md  main.cpp  main.cpp.old
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md  stack1.json  stack2.json  stack3.json
